Changed the background attachment to position fixed to solve the slow loading probleem on mobile divec

--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,6 +1,6 @@
 footer {
   background-color: black;
-  /* background-color: rgba(0, 0, 0, 0.7); */
+  background-color: rgba(0, 0, 0, 0.8);
 
   margin-top: auto;
   display: flex;
@@ -10,6 +10,10 @@ footer {
   width: 100%;
   height: 6rem;
   font-family: 'Titillium Web', sans-serif;
+
+  z-index: 1;
+position: fixed;
+bottom: 0;
 }
 
 .footerContainer{
