--- a/src/components/modal.module.css
+++ b/src/components/modal.module.css
@@ -27,7 +27,7 @@
     justify-content: center;
     border-radius: 5px;
     margin-top: 10%;
-    padding-top: 1.5rem;
+    padding-top: 0.5rem;
 }
 
 .modalBtn {
